Get images working

--- a/src/content/blog/2021/nand2tetris-part1/index.mdx
+++ b/src/content/blog/2021/nand2tetris-part1/index.mdx
@@ -9,7 +9,7 @@ media_subpath: '/ideas/nand2tetris-part1/'
 draft: false
 audience: 'Developers'
 image:
-  path: /tetris.jpeg
+  path: "./tetris.jpeg"
   alt: A Tetris Skyline by Dan Allison
 ---
 
