--- a/src/content/blog/2022/nand2tetris-vm-translator/index.mdx
+++ b/src/content/blog/2022/nand2tetris-vm-translator/index.mdx
@@ -11,7 +11,7 @@ hero:
 draft: false
 audience: 'All'
 image:
-  path: /self-replicating-machine.png
+  path: "./self-replicating-machine.png"
   alt: Self Replicating Machine by Peter J. Yost
 ---
 
