--- a/src/content/blog/2022/planting-seeds/index.mdx
+++ b/src/content/blog/2022/planting-seeds/index.mdx
@@ -7,11 +7,11 @@ media_subpath: '/ideas/planting-seeds/'
 category: ['seedling']
 hero:
     alt: 'Flowers Harmony by tubik.arts'
-    src: 'garden.webp'
+    src: './garden.webp'
 draft: false
 audience: 'All'
 image:
-  path: /garden.webp
+  path: './garden.webp'
   alt: Flowers Harmony by tubik.arts
 ---
 
