--- a/src/content/blog/2022/search-engine-fundamentals/index.mdx
+++ b/src/content/blog/2022/search-engine-fundamentals/index.mdx
@@ -8,7 +8,7 @@ media_subpath: '/ideas/search-engine-fundamentals'
 draft: false
 audience: 'All'
 image:
-  path: /low-cost-air-lines-jacek-yerka.jpg
+  path: "./low-cost-air-lines-jacek-yerka.jpg"
   alt: Low cost air lines by Jacek Yerka
 ---
 
