--- a/src/content/blog/2023/tech-debt/index.mdx
+++ b/src/content/blog/2023/tech-debt/index.mdx
@@ -8,7 +8,7 @@ media_subpath: '/ideas/tech-debt/'
 draft: false
 audience: 'All'
 image:
-  path: /kitchen-safety.png
+  path: "./kitchen-safety.png"
   alt: Messy Kitchen
 ---
 
