--- a/src/content/blog/2025/gios-pr3/index.mdx
+++ b/src/content/blog/2025/gios-pr3/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-pr3/"
 image:
-  path: /ipc.png
+  path: "./ipc.png"
   alt: 'Fig 7 Le Telephone by T du Moncel Paris 1880'
 ---
 
