--- a/src/content/blog/2025/ml-a1/index.mdx
+++ b/src/content/blog/2025/ml-a1/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a1/"
 image:
-  path: /Moebius09.jpg
+  path: "./Moebius09.jpg"
   alt: 'Moebius 09 by Jean Giraud'
 ---
 
