--- a/src/content/blog/2020/git-stash/index.mdx
+++ b/src/content/blog/2020/git-stash/index.mdx
@@ -7,11 +7,11 @@ category: ['evergreen']
 media_subpath: '/ideas/git-stash/'
 hero:
     alt: 'Squirrel Stash by Franco Matticchio'
-    src: 'squirrel-matticchio.jpg'
+    src: './squirrel-matticchio.jpg'
 draft: false
 audience: 'Developers'
 image:
-  path: /squirrel-matticchio.jpg
+  path: './squirrel-matticchio.jpg'
   alt: Squirrel Stash by Franco Matticchio
 ---
 
