--- a/src/content/blog/2022/python-bitwise-set-and-dicts/index.mdx
+++ b/src/content/blog/2022/python-bitwise-set-and-dicts/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'Developers'
 media_subpath: '/ideas/python-bitwise-set-and-dicts/'
 image:
-  path: /galatea-of-the-spheres.jpg
+  path: "./galatea-of-the-spheres.jpg"
   alt: Galatea of the Spheres by Salvador Dalí
 ---
 
