--- a/src/content/blog/2023/language-models/index.mdx
+++ b/src/content/blog/2023/language-models/index.mdx
@@ -9,7 +9,7 @@ media_subpath: '/ideas/language-models/'
 draft: false
 audience: 'All'
 image:
-  path: /statistical-modeling.jpg
+  path: "./statistical-modeling.jpg"
   alt: Statistical Modeling by D.P. Kroese and J.C.C. Chan. Statistical Modeling and Computation,
     Springer, 2014.
 ---
