--- a/src/content/blog/2023/semantic-search/index.mdx
+++ b/src/content/blog/2023/semantic-search/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/semantic-search/"
 image:
-  path: /the-ascendants-by-wangari-mathenge.webp
+  path: "./the-ascendants-by-wangari-mathenge.webp"
   alt: 'The Ascendants XI (Homage To Ecclesiastes 3:1-8), 2021 by Wangari Mathenge'
 ---
 
