--- a/src/content/blog/2025/gios-pr4/index.mdx
+++ b/src/content/blog/2025/gios-pr4/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-pr4/"
 image:
-  path: /moebius-by-jean-giraud.jpg
+  path: "./moebius-by-jean-giraud.jpg"
   alt: 'Moebius by Jean Giraud'
 ---
 
