--- a/src/content/blog/2025/gios-retro/index.mdx
+++ b/src/content/blog/2025/gios-retro/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gios-retro/"
 image:
-  path: /affiche-moebius-arzak-mystere-montrouge.jpg
+  path: "./affiche-moebius-arzak-mystere-montrouge.jpg"
   alt: 'Affiche Moebius Arzak Mystere Montrouge by Jean Giraud'
 ---
 
