--- a/src/content/blog/2025/ml-a3/index.mdx
+++ b/src/content/blog/2025/ml-a3/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a3/"
 image:
-  path: /moebius-aka-jean-giraud-39-of-41.jpg
+  path: "./moebius-aka-jean-giraud-39-of-41.jpg"
   alt: 'Moebius aka Jean Giraud 39 of 41'
 ---
 
