--- a/src/content/blog/2025/ml-a4/index.mdx
+++ b/src/content/blog/2025/ml-a4/index.mdx
@@ -8,7 +8,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/ml-a4/"
 image:
-  path: /Moebius02.webp
+  path: "./Moebius02.webp"
   alt: 'Moebius 02 by Jean Giraud'
 ---
 
