--- a/src/content/blog/2023/semantic-search/index.mdx
+++ b/src/content/blog/2023/semantic-search/index.mdx
@@ -47,7 +47,7 @@ Models typically do this conversion from text to numbers in a few steps. First, 
 
 ![Comparision of representations between one hot encoding and word embeddings. From WhatsNextApp: LSTM-based Next-App Prediction with App Usage Sequences](Comparison-of-representations-between-one-hot-encoding-and-word-embeddings.png)
 
-![PLACEHOLDER](https://neuro.cs.ut.ee/wp-content/uploads/2018/09/embeddings.png)
+![PLACEHOLDER https://neuro.cs.ut.ee/wp-content/uploads/2018/09/embeddings.png](embeddings.png)
 
 The one-hot vectors are fed into a model that was trained on a large body of text and has learned the statistical relationships between words. This process of feeding data to a trained model is typically called inference. The model is a humongous math formula, like a spreadsheet on steroids, with a ton of numbers in them called weights and biases. The model takes in the one-hot vectors, does a bunch of multiplications, and outputs an embedding vector. The embedding vectors are dense, meaning they have a lot of non-zero values, and have been embued with meaning from the model.
 
