WIP refining UI

--- a/src/content/blog/2025/gios-retro/index.mdx
+++ b/src/content/blog/2025/gios-retro/index.mdx
@@ -2,6 +2,7 @@
 title: 'Graduate Introduction to Operating Systems'
 description: 'What I Learned in Graduate Introduction to Operating Systems (GIOS) - A Retrospective'
 date: '2025-05-05'
+updatedDate: '2025-06-05'
 tags: ['gios', 'operating-systems', 'c', 'c++', 'python', 'multithreading', 'ipc', 'socket-programming', 'distributed-systems']
 category: ['mscs']
 draft: false
