Add a status and type to all posts

--- a/src/content/blog/2020/git-stash/index.mdx
+++ b/src/content/blog/2020/git-stash/index.mdx
@@ -2,6 +2,8 @@
 title: 'Git Stash, save work for winter 🐿'
 description: 'Quick tips for using git stash.'
 date: '2020-08-30'
+status: 'complete'
+type: 'article'
 tags: ['git', 'tips', 'short']
 category: ['evergreen']
 media_subpath: '/ideas/git-stash/'
