--- a/src/content/blog/2021/nand2tetris-part1/index.mdx
+++ b/src/content/blog/2021/nand2tetris-part1/index.mdx
@@ -3,6 +3,8 @@ title: 'From Boolean Logic Gates to an Assembler'
 description: 'The first half of the Nand2Tetris course'
 date: '2021-09-26'
 updated: '2022-03-12'
+status: 'complete'
+type: 'retro'
 category: ['budding']
 tags: ['computer-science', 'learning-in-public', 'typescript']
 media_subpath: '/ideas/nand2tetris-part1/'
