--- a/src/content/blog/2022/nand2tetris-vm-translator/index.mdx
+++ b/src/content/blog/2022/nand2tetris-vm-translator/index.mdx
@@ -2,6 +2,8 @@
 title: 'The Hack Virtual Machine'
 description: 'Creating a virtual machine translator for the Nand2Tetris course'
 date: '2022-03-12'
+status: 'complete'
+type: 'retro'
 category: ['seedling']
 tags: ['computer-science', 'learning-in-public', 'typescript', 'java']
 media_subpath: '/ideas/nand2tetris-vm-translator/'
