--- a/src/content/blog/2022/planting-seeds/index.mdx
+++ b/src/content/blog/2022/planting-seeds/index.mdx
@@ -2,6 +2,8 @@
 title: 'A foray in Digital Gardens 👨‍🌾'
 description: 'Planting the seeds of my own digital garden'
 date: '2022-03-11'
+status: 'complete'
+type: 'note'
 tags: ['digital-gardens', 'learning-in-public']
 media_subpath: '/ideas/planting-seeds/'
 category: ['seedling']
