--- a/src/content/blog/2022/search-engine-fundamentals/index.mdx
+++ b/src/content/blog/2022/search-engine-fundamentals/index.mdx
@@ -2,6 +2,8 @@
 title: 'Search Engine Fundamentals'
 description: 'Essential terms and concepts of how search works. Queries, indexes, & relevance.'
 date: '2022-11-20'
+status: 'complete'
+type: 'article'
 tags: ['algorithms', 'information-retrieval', 'nlp', 'search']
 category: ['budding']
 media_subpath: '/ideas/search-engine-fundamentals'
