--- a/src/content/blog/2023/language-models/index.mdx
+++ b/src/content/blog/2023/language-models/index.mdx
@@ -3,6 +3,8 @@ title: 'Language Models'
 description: 'From n-grams to ChatGPT, how language models work and how they can be used to solve real-world problems.'
 date: '2023-05-21'
 updated: '2023-05-31'
+status: 'complete'
+type: 'article'
 tags: ['machine-learning', 'data-science', 'short', 'nlp']
 category: ['seedling']
 media_subpath: '/ideas/language-models/'
