--- a/src/content/blog/2023/semantic-search/index.mdx
+++ b/src/content/blog/2023/semantic-search/index.mdx
@@ -2,6 +2,8 @@
 title: 'Semantic Search'
 description: "What's an embedding vector, and how can we use neural networks to improve the relevance of search results?"
 date: '2023-08-16'
+status: 'complete'
+type: 'article'
 tags: ['information-retrieval', 'search', 'nlp', 'data-science', 'algorithms', 'machine-learning']
 category: ['seedling']
 draft: false
