--- a/src/content/blog/2023/tech-debt/index.mdx
+++ b/src/content/blog/2023/tech-debt/index.mdx
@@ -2,6 +2,8 @@
 title: 'Knowledge Debt 💸'
 description: "Tech debt, knowledge debt, and the kitchen sink."
 date: '2023-06-27'
+status: 'complete'
+type: 'article'
 tags: ['software-engineering', 'short']
 category: ['seedling']
 media_subpath: '/ideas/tech-debt/'
