--- a/src/content/blog/2025/gios-pr3/index.mdx
+++ b/src/content/blog/2025/gios-pr3/index.mdx
@@ -2,7 +2,9 @@
 title: 'Proxy & Cache Server'
 description: 'Building a Proxy and Cache Server with IPC and Shared Memory in C: Lessons from a Graduate OS Course'
 date: '2025-01-28'
-tags: ['project', 'gios', 'operating-systems', 'c', 'multithreading', 'ipc', 'shared-memory']
+status: 'in-progress'
+type: 'project'
+tags: ['gios', 'operating-systems', 'c', 'multithreading', 'ipc', 'shared-memory']
 category: ['projects']
 draft: false
 audience: 'All'
