--- a/src/content/blog/2025/gios-pr4/index.mdx
+++ b/src/content/blog/2025/gios-pr4/index.mdx
@@ -2,7 +2,9 @@
 title: 'Distributed File System'
 description: 'Building a Distributed File System in C++: Lessons in Consistency and Remote Communication'
 date: '2025-01-28'
-tags: ['project', 'gios', 'operating-systems', 'c++', 'multithreading', 'ipc', 'rpc', 'distributed-systems']
+status: 'in-progress'
+type: 'project'
+tags: ['gios', 'operating-systems', 'c++', 'multithreading', 'ipc', 'rpc', 'distributed-systems']
 category: ['projects']
 draft: false
 audience: 'All'
