--- a/src/content/blog/2025/ml-a1/index.mdx
+++ b/src/content/blog/2025/ml-a1/index.mdx
@@ -2,7 +2,9 @@
 title: 'Supervised Learning on Diverse Datasets'
 description: 'A comparative analysis of supervised learning algorithms on diverse datasets'
 date: '2025-01-28'
-tags: ['project', 'machine-learning', 'python']
+status: 'in-progress'
+type: 'project'
+tags: ['machine-learning', 'python']
 category: ['projects']
 draft: false
 audience: 'All'
