--- a/src/content/blog/2025/ml-a2/index.mdx
+++ b/src/content/blog/2025/ml-a2/index.mdx
@@ -2,7 +2,9 @@
 title: 'Random Optimization on Discrete and Continuous Problems'
 description: 'A comparative analysis of random optimization performance on discrete and continuous problems'
 date: '2025-01-28'
-tags: ['project', 'machine-learning', 'python']
+status: 'in-progress'
+type: 'project'
+tags: ['machine-learning', 'python']
 category: ['projects']
 draft: false
 audience: 'All'
