--- a/src/content/blog/2022/exponential-backoff/index.mdx
+++ b/src/content/blog/2022/exponential-backoff/index.mdx
@@ -2,6 +2,8 @@
 title: 'Exponential Backoff and Jitter ⏳'
 description: 'How to automaically retry requests and not blow stuff up'
 date: '2022-09-28'
+status: 'complete'
+type: 'article'
 tags: ['algorithms', 'typescript', 'node', 'short']
 category: ['budding']
 media_subpath: '/ideas/exponential-backoff/'
