--- a/src/content/blog/2025/gios-pr1/index.mdx
+++ b/src/content/blog/2025/gios-pr1/index.mdx
@@ -2,7 +2,9 @@
 title: 'Concurrent File Server'
 description: 'Building a Scalable Multithreaded File Server in C: Lessons from a Graduate OS Course'
 date: '2025-01-28'
-tags: ['project', 'gios', 'operating-systems', 'c', 'multithreading', 'socket-programming']
+status: 'in-progress'
+type: 'project'
+tags: ['gios', 'operating-systems', 'c', 'multithreading', 'socket-programming']
 category: ['projects']
 draft: false
 audience: 'All'
