--- a/src/content/blog/2025/ml-a3/index.mdx
+++ b/src/content/blog/2025/ml-a3/index.mdx
@@ -2,7 +2,9 @@
 title: 'Unsupervised Learning Techniques'
 description: 'Exploration of unsupervised learning techniques'
 date: '2025-01-28'
-tags: ['project', 'machine-learning', 'python']
+status: 'in-progress'
+type: 'project'
+tags: ['machine-learning', 'python']
 category: ['projects']
 draft: false
 audience: 'All'
