--- a/src/content/blog/2025/ml-a4/index.mdx
+++ b/src/content/blog/2025/ml-a4/index.mdx
@@ -2,7 +2,9 @@
 title: 'Reinforcement Learning on a Discrete & Continuous Environments'
 description: 'Comparison of reinforcement learning algorithms in discrete and continuous environments'
 date: '2025-01-28'
-tags: ['project', 'machine-learning', 'python']
+status: 'in-progress'
+type: 'project'
+tags: ['machine-learning', 'python']
 category: ['projects']
 draft: false
 audience: 'All'
