Capitalize abbreviated tags

--- a/src/content/blog/2025/gios-pr1/index.mdx
+++ b/src/content/blog/2025/gios-pr1/index.mdx
@@ -4,7 +4,7 @@ description: 'Building a Scalable Multithreaded File Server in C: Lessons from a
 date: '2025-01-28'
 status: 'in-progress'
 type: 'project'
-tags: ['gios', 'operating-systems', 'c', 'multithreading', 'socket-programming']
+tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'socket-programming']
 category: ['projects']
 draft: false
 audience: 'All'
