--- a/src/content/blog/2025/gios-pr4/index.mdx
+++ b/src/content/blog/2025/gios-pr4/index.mdx
@@ -4,7 +4,7 @@ description: 'Building a Distributed File System in C++: Lessons in Consistency 
 date: '2025-01-28'
 status: 'in-progress'
 type: 'project'
-tags: ['gios', 'operating-systems', 'c++', 'multithreading', 'ipc', 'rpc', 'distributed-systems']
+tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'IPC', 'RPC', 'distributed-systems']
 category: ['projects']
 draft: false
 audience: 'All'
