--- a/src/content/blog/2025/gios-retro/index.mdx
+++ b/src/content/blog/2025/gios-retro/index.mdx
@@ -5,7 +5,7 @@ date: '2025-05-05'
 updated: '2025-06-05'
 status: 'in-progress'
 type: 'retro'
-tags: ['gios', 'operating-systems', 'c', 'c++', 'python', 'multithreading', 'ipc', 'socket-programming', 'distributed-systems']
+tags: ['GIOS', 'operating-systems', 'c', 'c++', 'python', 'multithreading', 'IPC', 'socket-programming', 'distributed-systems']
 category: ['mscs']
 draft: false
 audience: 'All'
