--- a/src/content/blog/2023/language-models/index.mdx
+++ b/src/content/blog/2023/language-models/index.mdx
@@ -5,7 +5,7 @@ date: '2023-05-21'
 updated: '2023-05-31'
 status: 'complete'
 type: 'article'
-tags: ['machine-learning', 'data-science', 'short', 'nlp']
+tags: ['machine-learning', 'data-science', 'short', 'NLP']
 category: ['seedling']
 media_subpath: '/ideas/language-models/'
 draft: false
