--- a/src/content/blog/2025/gios-pr3/index.mdx
+++ b/src/content/blog/2025/gios-pr3/index.mdx
@@ -4,7 +4,7 @@ description: 'Building a Proxy and Cache Server with IPC and Shared Memory in C:
 date: '2025-01-28'
 status: 'in-progress'
 type: 'project'
-tags: ['gios', 'operating-systems', 'c', 'multithreading', 'ipc', 'shared-memory']
+tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'IPC', 'shared-memory']
 category: ['projects']
 draft: false
 audience: 'All'
